<resources>
    <drawable name="clr_normal">#ffffff</drawable>
    <drawable name="clr_pressed">#005ab5</drawable>
    <string name="app_name">alcohol test</string>
    <string  name="soju">소주</string>
    <string  name="beer">맥주</string>
    <string  name="makguli">막걸리</string>
    <string  name="ml">ml</string>
    <string  name="male">남자</string>
    <string  name="female">여자</string>
    <string  name="cal">계산하기</string>
    <string  name="time">시간 경과</string>
    <string  name="etc">기타</string>
    <string  name="vol">도</string>
    <string  name="wei">몸무게</string>
    <string  name="sab">사발</string>
    <string  name="kg">kg</string>
    <string  name="zan">잔</string>
    <string  name="cc">cc</string>
    <string  name="alcal">혈중 알콜 농도 계산기</string>
    <string  name="warning">음주 운전은 절대 하시면 안됩니다.\n술먹고 운전하지 마세요.</string>
    <string  name="zero">0</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_new_number">NewNumberActivity</string>
    <string name="title_activity_outgoing_call_list">OutgoingCallListActivity</string>
    <string name="title_activity_incoming_call_list">IncomingCallListActivity</string>


</resources>